--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </div>
 
     <div class="btm-slides">
-      <span class="tugma"></span>
-      <span class="tugma"></span>
-      <span class="tugma"></span>
-      <span class="tugma"></span>
-      <span class="tugma"></span>
+      <span class="tugma">1</span>
+      <span class="tugma">2</span>
+      <span class="tugma">3</span>
+      <span class="tugma">4</span>
+      <span class="tugma">5</span>
     </div>
 
     <div class="sliders left">
